# bucl-crud-admin-server

./: .gitignore  .python-version  README.md  manage.py  pyproject.toml
buclcrudadminserver/: asgi.py  settings.py  urls.py  wsgi.py
core/admin/: base_admin.py
core/model/: custom_field.py
