[tool.poetry]
name = "bucl-crud-admin-server"
version = "0.1.0"
description = "BUCL CRUD Admin Server"
authors = ["Changmin Kim <ckd29672@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.7"
mysqlclient = "^2.2.0"
django-jazzmin = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
